--- a/6_1_5.html
+++ b/6_1_5.html
@@ -59,7 +59,7 @@
             </div>
             <div>아이콘이 들어갈 자리</div>
             <div>
-                <img src="image/thumbnails/1.jpg" width="32%" />
+                <img src="C:\Users\kzx11\OneDrive\Desktop\INSTRAGRAM\image\thumbnails\1.jpg" width="32%" />
                 <img src="image/thumbnails/2.jpg" width="32%" />
                 <img src="image/thumbnails/3.jpg" width="32%" />
                 <img src="image/thumbnails/4.jpg" width="32%" />
